# digitify

./: README.md
backend/: .gitignore  Makefile  pyproject.toml
backend/app/: main.py
backend/scripts/: synthesize_dataset.py  train_crnn.py
